--- a/src/components/director-view/director-view.scss
+++ b/src/components/director-view/director-view.scss
@@ -8,10 +8,10 @@ h3 {
 
 .director-bio,
 .director-birth,
-.director.death
+.director-death
 {
   max-width: 500px;
-  margin: 20px auto;
+  margin: 10px auto;
 }
 
 button {
